@@ -262,7 +262,11 @@ Uninstall the given ports
 set porthelp(unload) $porthelp(load)
 
 set porthelp(upgrade) {
-Upgrades the given ports to the latest version
+Upgrades the given ports to the latest version. Respects global options
+-n, -R, -u, and -f (see the port man page).  Note that in selecting variants
+to use in the upgraded build of the port, the order of precedence is variants
+specified on the command line, then variants active in the latest installed
+version of the port, then the variants.conf file.
 }
 
 set porthelp(url) {
